# rust-codes

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO.md  codes-init.sh  shell.nix
.github/: dependabot.yml
.github/workflows/: audit.yml  cargo-audit.yml  gh-pages.yml  release.yml  rust.yml
codes-agency/: Cargo.toml  README.md
codes-agency/data/: agencies.xml
codes-agency/src/: lib.rs
codes-check-digits/: Cargo.toml  README.md
codes-check-digits/src/: common.rs  error.rs  gs1.rs  iso_7064.rs  lib.rs  luhn.rs  sedol.rs
codes-common/: Cargo.toml  README.md
codes-common/src/: check_digits.rs  csv.rs  error.rs  lib.rs
codes-gs1-gln/: Cargo.toml  README.md
codes-gs1-gln/src/: lib.rs
codes-iana-charset/: Cargo.toml  README.md  build.rs
codes-iana-charset/data/: character-sets-1.csv  refresh.sh
codes-iana-charset/src/: lib.rs
codes-iana-charset/templates/: lib._rs
codes-iso-10383/: Cargo.toml  README.md  build.rs
codes-iso-10383/data/: ISO10383_MIC-in.csv  ISO10383_MIC.csv  refresh.sh
codes-iso-10383/src/: category.rs  lib.rs  status.rs
codes-iso-10383/templates/: lib._rs
codes-iso-10962/: Cargo.toml  README.md  build.rs
codes-iso-10962/data/: cfi-current.xlsx  refresh.sh
codes-iso-10962/data/csv-sheets/: CBXXXX.csv  CEXXXX.csv  CFXXXX.csv  CHXXXX.csv  CIVs_Category.csv  CIXXXX.csv  CMXXXX.csv  CPXXXX.csv  CSXXXX.csv  Categories.csv  DAXXXX.csv  DBXXXX.csv  DCXXXX.csv  DDXXXX.csv  DEXXXX.csv  DGXXXX.csv  DMXXXX.csv  DNXXXX.csv  DSXXXX.csv  DTXXXX.csv  DWXXXX.csv  DYXXXX.csv  Debt_instruments_Category.csv  ECXXXX.csv  EDXXXX.csv  EFXXXX.csv  ELXXXX.csv  EMXXXX.csv  EPXXXX.csv  ESXXXX.csv  EYXXXX.csv  Entitlement_rights_Category.csv  Equities_Category.csv  FCXXXX.csv  FFXXXX.csv  Financing_Category.csv  Forwards_Category.csv  Futures_Category.csv  HCXXXX.csv  HEXXXX.csv  (+54 more)
codes-iso-10962/src/: lib.rs
codes-iso-10962/templates/: lib._rs
codes-iso-15924/: Cargo.toml  README.md  build.rs
codes-iso-15924/data/: refresh.sh
codes-iso-15924/src/: lib.rs
codes-iso-15924/templates/: lib._rs
codes-iso-17442/: Cargo.toml  README.md
codes-iso-17442/src/: lib.rs
codes-iso-3166/: Cargo.toml  README.md  build.rs
codes-iso-3166/data/: country-codes.csv  country-names.csv  languages.csv  refresh.sh  subdivision-categories.csv  subdivision-names.csv  subdivisions.csv
codes-iso-3166/src/: lib.rs
codes-iso-3166/src/part_1/: indices.rs  mod.rs  status.rs
codes-iso-3166/src/part_2/: categories.rs  indices.rs  mod.rs  territories.rs
codes-iso-3166/templates/: categories._rs  lib._rs  part_1._rs  part_2._rs  territories._rs
codes-iso-4217/: Cargo.toml  README.md  build.rs  refresh.sh
codes-iso-4217/data/: list-one.xml  list-three.xml  refresh.sh  xe-symbols.html
codes-iso-4217/src/: lib.rs
codes-iso-4217/templates/: lib._rs
codes-iso-6166/: Cargo.toml  README.md
codes-iso-6166/src/: lib.rs  nsid.rs  nsin.rs
codes-iso-6166/src/nsin/: cusip.rs  mod.rs  sedol.rs  valoren.rs
codes-iso-639/: Cargo.toml  README.md  build.rs
codes-iso-639/data/: iso-639-2.tsv  iso-639-3.tsv  refresh.sh
codes-iso-639/src/: lib.rs  part_1.rs  part_2.rs  part_3.rs  part_5.rs
codes-iso-639/templates/: part_1._rs  part_2._rs  part_3._rs  part_5._rs
codes-un-m49/: Cargo.toml  README.md  build.rs
codes-un-m49/data/: m49-overview.html  refresh.sh
codes-un-m49/src/: kinds.rs  lib.rs
codes-un-m49/templates/: lib._rs
common/: Cargo.toml
templates/: build.rs  lib._rs  lib.rs
