[package]
name = "codes-agency"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serde_derive"]
serde_derive = ["serde"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
