[package]
name = "codes-check-digits"
description = "Common implementation of check digit algorithms"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/johnstonskj/rust-codes"
documentation = "https://docs.rs/codes-check-digits/"
authors = ["Simon Johnston, <johnstonskj@gmail.com>"]
license = "MIT"
readme = "README.md"
publish = true

[dependencies]
codes-common = { version = "0.1", path = "../codes-common" }
tracing = "0.1"

[target.'cfg(not(target_family = "windows"))'.dependencies]
rug = { version = "1.18.0", default-features = false, features = ["integer"], optional = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true

[features]
default = ["gs1", "iso_7064", "luhn", "sedol"]
gs1 = []
iso_7064 = []
luhn = []
sedol = []
big_integer = ["dep:rug"]