[package]
name = "codes-common"
description  = "Support capabilities for codes-* packages."
version = "0.1.8"
edition = "2021"
repository = "https://github.com/johnstonskj/rust-codes"
documentation = "https://docs.rs/codes-common/"
authors = ["Simon Johnston, <johnstonskj@gmail.com>"]
license = "MIT"
readme = "README.md"
publish = true

[dependencies]
tera = "1.17"
csv = { version = "1.1", optional = true }
tracing = "0.1"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true

[features]
csv_tools = ["csv"]
