[package]
name = "codes-common"
description  = "Support capabilities for codes-* packages."
version = "0.1.8"
edition = "2021"
repository = "https://github.com/johnstonskj/rust-codes"
documentation = "https://docs.rs/codes-common/"
authors = ["Simon Johnston, <johnstonskj@gmail.com>"]
license = "MIT"
readme = "README.md"
publish = true

[dependencies]

csv = { version = "1.1", optional = true }
tera = { version = "1.17", optional = true }
tracing = { version = "0.1", optional = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true

[features]
build = ["tera", "tracing"]
csv_tools = ["build", "csv"]
