[package]
name = "codes-gs1-gln"
description = "This package provides an implementation of the GS1 Global Location Number (GLN) standard."
version = "0.1.1"
edition = "2021"
repository = "https://github.com/johnstonskj/rust-codes"
documentation = "https://docs.rs/codes-gs1-gln/"
authors = ["Simon Johnston, <johnstonskj@gmail.com>"]
license = "MIT"
readme = "README.md"
publish = true

[dependencies]
codes-agency = { version = "0.1", path = "../codes-agency" }
codes-check-digits = { version = "0.1", path = "../codes-check-digits", features = ["gs1"] }
codes-common = { version = "0.1", path = "../codes-common" }
serde = { version = "1.0", features = ["derive"], optional = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true

[features]
default = ["serde"]

