[package]
name = "codes-iana-charset"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codes-agency = { version = ">=0.1.3", path = "../codes-agency" }
codes-common = { version = "0.1", path = "../codes-common" }
serde = { version = "1.0", features = ["derive"], optional = true }

[build-dependencies]
codes-common = { version = "0.1", features = ["csv_tools"], path = "../codes-common" }
csv = "1.1"
tera = "1.17"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true

[features]
default = ["serde"]

