[package]
name = "codes-iso-10383"
description  = "This package contains an implementation of the ISO-10383 Market Identification Code (MIC) specification."
version = "0.1.0"
edition = "2021"
repository = "https://github.com/johnstonskj/rust-codes"
documentation = "https://docs.rs/codes-iso-10383/"
authors = ["Simon Johnston, <johnstonskj@gmail.com>"]
license = "MIT"
readme = "README.md"
publish = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true

[features]
default = ["serde"]
category_description = []

[dependencies]
codes-agency = { version = ">=0.1.3", path = "../codes-agency" }
codes-iso-17442 = { version = "0.1", path = "../codes-iso-17442" }
codes-common = { version = "0.1", path = "../codes-common" }
serde = { version = "1.0", features = ["derive"], optional = true }

[build-dependencies]
codes-common = { version = "0.1", path = "../codes-common" }
csv = "1.1"
tera = "1.17"
