[package]
name = "codes-iso-10383"
description  = "This package contains an implementation of the ISO-10383 Market Identification Code (MIC) specification."
version = "0.1.6"
edition = "2021"
repository = "https://github.com/johnstonskj/rust-codes"
documentation = "https://docs.rs/codes-iso-10383/"
authors = ["Simon Johnston, <johnstonskj@gmail.com>"]
license = "MIT"
readme = "README.md"
publish = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true

[features]
default = ["serde"]
market_name = []
location = ["codes-iso-3166"]
legal_entity = ["codes-iso-17442"]
real_url = ["url"]
dates = []
#real_dates = ["chrono"]
comments = []

[dependencies]
#chrono = { version = "0.4", features = ["serde"], optional = true }
codes-agency = { version = "0.1", path = "../codes-agency" }
codes-iso-3166 = { version = "0.1", path = "../codes-iso-3166", optional = true }
codes-iso-17442 = { version = "0.1", path = "../codes-iso-17442", optional = true }
codes-common = { version = "0.1", path = "../codes-common" }
serde = { version = "1.0", features = ["derive"], optional = true }
url = { version = "2.3", optional = true, features = ["serde"] }

[build-dependencies]
codes-common = { version = "0.1", features = ["csv_tools"], path = "../codes-common" }
csv = "1.1"
tera = "1.17"
