[package]
name = "codes-iso-17442"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codes-agency = { version = ">=0.1.3", path = "../codes-agency" }
common = { version = "0.1", path = "../common" }
serde = { version = "1.0", features = ["derive"], optional = true }
url = { version = "2.3.1", optional = true, features = ["serde"] }

[build-dependencies]
common = { version = "0.1", path = "../common" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true

[features]
default = ["serde"]
urn = ["url"]

