[package]
name = "codes-iso-3166"
description  = "This package contains an implementation of the ISO 3166 Country Codes specification."
version = "0.1.5"
edition = "2021"
repository = "https://github.com/johnstonskj/rust-codes"
documentation = "https://docs.rs/codes-iso-3166/"
authors = ["Simon Johnston, <johnstonskj@gmail.com>"]
license = "MIT"
readme = "README.md"
publish = true

[dependencies]
codes-agency = { version = "0.1", path = "../codes-agency" }
codes-common = { version = "0.1", path = "../codes-common" }
codes-iso-639 = { version = "0.1", path = "../codes-iso-639", features = ["part_3"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[build-dependencies]
codes-common = { version = "0.1", features = ["csv_tools"], path = "../codes-common" }
csv = "1.1"
lazy_static = "1.4"
regex = "1.7"
tera = "1.17"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true

[features]
default = ["serde"]
alpha_3_code = []
numeric_code = []
independent = []
status = []
full_name = []
local_names = []
languages = ["codes-iso-639"]
formerly = []
part_2 = []
categories = []
territories = []
indices = []
