[package]
name = "codes-iso-4217"
description  = "This package provides an implementation of ISO 4217:2015 currency codes"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/johnstonskj/rust-codes"
documentation = "https://docs.rs/codes-iso-4217/"
license = "MIT"
readme = "README.md"
publish = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
features = ["default"]

[features]
default = ["serde_derive"]
serde_derive = ["serde"]

[dependencies]
codes-agency = { version = "0.1", path = "../codes-agency" }
serde = { version = "1.0", features = ["derive"], optional = true }
