[package]
name = "codes-iso-4217"
description  = "This package contains an implementation of the ISO 4217 Currency Codes specification."
version = "0.1.5"
edition = "2021"
repository = "https://github.com/johnstonskj/rust-codes"
documentation = "https://docs.rs/codes-iso-4217/"
authors = ["Simon Johnston, <johnstonskj@gmail.com>"]
license = "MIT"
readme = "README.md"
publish = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true

[features]
default = ["serde"]
currency_name = []
country_name = []
monetary_units = []
is_fund = []
historical_codes = []
symbols = []

[dependencies]
codes-agency = { version = ">=0.1.3", path = "../codes-agency" }
codes-common = { version = "0.1", path = "../codes-common" }
serde = { version = "1.0", features = ["derive"], optional = true }

[build-dependencies]
codes-common = { version = "0.1", path = "../codes-common" }
quick-xml = "0.26"
scraper = "0.13.0"
tera = "1.17"
