[package]
name = "codes-iso-639"
description = "This package contains an implementation of the ISO 639 (Parts 1, 3, and 5) Language Code specifications."
version = "0.1.5"
edition = "2021"
repository = "https://github.com/johnstonskj/rust-codes"
documentation = "https://docs.rs/codes-iso-639/"
authors = ["Simon Johnston, <johnstonskj@gmail.com>"]
license = "MIT"
readme = "README.md"
publish = true

[dependencies]
codes-agency = { version = "0.1", path = "../codes-agency" }
codes-common = { version = "0.1", path = "../codes-common" }
serde = { version = "1.0", features = ["derive"], optional = true }

[build-dependencies]
codes-common = { version = "0.1", features = ["csv_tools"], path = "../codes-common" }
csv = "1.1"
tera = "1.17"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true

[features]
default = ["serde"]
part_3 = []
part_5 = []
scope = []
language_type = []
macro_individuals = []
comment = []
