[package]
name = "codes-un-m49"
description = "This package contains an implementation of the UN M49 - Standard Country or Area Codes for Statistical Use (Series M, No. 49) specification"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/johnstonskj/rust-codes"
documentation = "https://docs.rs/codes-un-m49/"
authors = ["Simon Johnston, <johnstonskj@gmail.com>"]
license = "MIT"
readme = "README.md"
publish = true

[dependencies]
codes-agency = { version = "0.1", path = "../codes-agency" }
codes-common = { version = "0.1", path = "../codes-common" }
codes-iso-3166 = { version = "0.1", path = "../codes-iso-3166", features = ["part_2"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
tera = "1.17"

[build-dependencies]
codes-common = { version = "0.1", path = "../codes-common", features = ["build"] }
scraper = "0.15.0"
tera = "1.17"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true

[features]
default = ["serde"]
country_codes = ["codes-iso-3166"]